--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,18 +1,18 @@
 .header {
-  background: #20222b;
+  background: $off-black;
   color: white;
-  margin-bottom: 4.8rem;
-  padding: 1.6rem 0;
+  margin-bottom: $xl-size;
+  padding: $m-size 0;
 }
 
 .header__title {
-font-size: 3.2rem;
-margin:0;
+  font-size: $l-size;
+  margin: 0;
 }
 
-.header__subtitle{
-  color: #a5afd7;
-  font-size:1.6rem;
+.header__subtitle {
+  color: $off-white;
+  font-size: $m-size;
   font-weight: 500;
-  margin :0;
+  margin: 0;
 }
