--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -11,7 +11,10 @@
 }
 
 .big-button:disabled{
-    opacity:5;
+    //background-color: lighten($purple,20%);
+    opacity: 50%;
+   
+   
 }
 
 .button{
