--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,9 @@
 @import './base/settings';
 @import './base/base';
 @import './components/add-option';
-@import './components/header';
-@import './components/container';
 @import './components/button';
-@import './components/widget';
+@import './components/container';
+@import './components/header';
+@import './components/modal';
 @import './components/option';
+@import './components/widget';
